fixed show more movies button hidden under footer

--- a/client/src/components/movies/movies.css
+++ b/client/src/components/movies/movies.css
@@ -100,7 +100,7 @@ h1.userMovies {
 .loadMoreBtnContainerUser {
   text-align: center;
   margin-top: 10rem;
-  margin-bottom: -5rem;
+  /* margin-bottom: -5rem; */
 }
 
 .popup {
